Fix mobile hamburger menu (still partially weird on iOS)

--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,7 @@ body {
 
 .button,
 button {
-    /* background-color: #fce563; */
     color: white;
-
     display: inline;
     padding: 10px 25px;
     border-radius: 5px;
@@ -53,13 +51,11 @@ button {
 .button:hover,
 button:hover {
     opacity: .7;
-    /* background-color: #fff2; */
 }
 
 .button>a,
 .button {
     text-decoration: none;
-    /* font-weight: ; */
 }
 
 body {
@@ -80,11 +76,11 @@ video {
 }
 
 nav#navbar {
-    padding: 0 10px;
+    /* padding: 0 20px; */
     box-shadow: 2px 2px 12px #0000;
     width: 100%;
     transition-duration: 200ms;
-    transition-property: box-shadow, min-height;
+    transition-property: box-shadow, min-height, grid-template-rows;
     transition-timing-function: ease;
     background-color: #fff;
     position: fixed;
@@ -128,7 +124,8 @@ nav#navbar.scrolled {
     font-size: 30px;
 }
 
-#navbar a {
+#navbar a,
+.switch a {
     text-decoration: none;
     color: black;
 }
@@ -142,7 +139,6 @@ nav#navbar.scrolled {
 }
 
 #navbar-items a {
-
     border-bottom: 2px solid transparent;
 }
 
@@ -183,7 +179,7 @@ nav#navbar.scrolled {
         grid-template-areas:
             "ti hm"
             "li li";
-        grid-template-rows: 48px auto;
+        grid-template-rows: 72px auto;
         position: fixed;
         top: 0;
         left: 0;
@@ -192,9 +188,14 @@ nav#navbar.scrolled {
         height: 100%;
     }
 
+    #navbar.open.scrolled {
+        grid-template-rows: 48px auto;
+    }
+
     #navbar-items {
         grid-area: li;
         flex-direction: column;
+        justify-content: center;
         font-size: min(min(10vw, 10vh), 35px);
         overflow-y: auto;
         height: 100%;
@@ -225,14 +226,12 @@ table {
 }
 
 .switch a {
-    color: black;
     flex-grow: 1;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    text-decoration: none;
 }
 
 .switch a.selected {
@@ -339,6 +338,7 @@ tr:nth-child(odd) {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    max-height: 300px;
     transition-duration: 250ms;
 }
 
